--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,68 @@
-<p>dashboard works!</p>
+<!--****************header****************** -->
+<div class="main">
+    <mat-toolbar class="header-toolbar">
+      <div class="logo">
+        <img src="../../../assets/bookStoreLogo.svg" alt="">
+        <span>Bookstore</span>
+      </div>
+  
+  
+      <div class="search-bar">
+        <div class="search">
+          <div class="searches-input">
+            <input class="input-search" placeholder="Search" type="search" >
+          </div>
+  
+          <button class="search-icon" matTooltip="Main menu" aria-label="Close Search" type="button" aria-hidden="false">
+            <svg focusable="false" height="40px" viewBox="0 0 24 24" width="40px" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M20.49,19l-5.73-5.73C15.53,12.2,16,10.91,16,9.5C16,5.91,13.09,3,9.5,3S3,5.91,3,9.5C3,13.09,5.91,16,9.5,16 c1.41,0,2.7-0.47,3.77-1.24L19,20.49L20.49,19z M5,9.5C5,7.01,7.01,5,9.5,5S14,7.01,14,9.5S11.99,14,9.5,14S5,11.99,5,9.5z">
+              </path>
+              <path d="M0,0h24v24H0V0z" fill="none"></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+  
+      <div class="profile" [matMenuTriggerFor]="menu">
+        <img src="../../../assets/profile.PNG" alt="">
+        <span class="material-symbols-sharp">
+            Nilesh
+        </span>
+      </div>
+      <mat-menu #menu="matMenu" class="profile-matMenu">
+        <span class="hello">Hello Nilesh,</span>
+  
+        <div class="menu-profile">
+          <img src="../../../assets/person_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+          <span class="profile-text">Profile</span>
+        </div>
+        <div class="menu-profile">
+          <img src="../../../assets/myorders.svg" alt="" style="transform: scaleY(-1)">
+          <span class="profile-text">My Order</span>
+        </div>
+        <div class="menu-profile">
+          <img src="../../../assets/favorite_FILL0_wght300_GRAD0_opsz24.svg" alt="">
+          <span class="profile-text">Wishlist</span>
+        </div>
+  
+        <button class="logoutButton" (click)="logout()">Logout</button>
+      </mat-menu>
+  
+      <div class="cart">
+        <img src="../../../assets/supermarket.svg" alt="" class="cart-img">
+        <span class="material-symbols-sharp">
+          Cart
+        </span>
+      </div>
+  
+    </mat-toolbar>
+  
+    <!-- <router-outlet></router-outlet> -->
+  
+  
+    <!--****************Footer****************** -->
+    <mat-toolbar color="primary" class="footer-toolbar">
+      <span class="footer-text">Copyright © 2020, Bookstore Private Limited. All Rights Reserved</span>
+    </mat-toolbar>
+  </div>
