--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,21 +1,30 @@
+// * {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+//   }
+  
+//   body {
+//     margin: 0;
+//     padding: 0;
+//   }
+// html{
+//   width: auto;
+//   height: auto;
+//   padding: 0;
+// }
 .main {
-    display: flex;
-    margin: 0;
-    width: 100%;
-    height: 99vh;
-    align-items: center;
-    background-color: #878787;
-    justify-content: center;
-    border: 2px solid yellow;
+    display: flex ;
+    margin: 0 ;
+    // width: 98vw ;
+    // height: 97.6vh ;
+    height: 100vh;
+    width: auto;
+    align-items: center ;
+    background-color: #707070 ;
+    justify-content: center ;
   }
-  // .main.login-selected {
-  //     display: flex;
-  //     width: 100%;
-  //     height: 100%;
-  //     align-items: center;
-  //     justify-content: center;
-  //     background-color: #707070; /* Background color when "Login" tab is selected */
-  //   }
+ 
   
   .logo-img-main {
     width: 600px;
