[Nilesh] : Updated dashboard and set the router-outlet for get-all-books components

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -57,10 +57,9 @@
       </div>
   
     </mat-toolbar>
-  
-    <!-- <router-outlet></router-outlet> -->
-  
-  
+  <div class="Book-Content">
+    <router-outlet></router-outlet>
+  </div>
     <!--****************Footer****************** -->
     <mat-toolbar color="primary" class="footer-toolbar">
       <span class="footer-text">Copyright © 2020, Bookstore Private Limited. All Rights Reserved</span>
