--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,6 +1,13 @@
+.Book-Content{
+  // border: 1px solid black;
+  width: auto;
+  height: auto;
+  // padding: 2vh 16vh;
+  margin: 0% 1.2%;
+}
 .main {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
   }
   ::ng-deep.mat-toolbar {
     background: #a03037;
@@ -10,6 +17,11 @@
     width: 100%;
     background-color: #a03037;
     height: 10vh;
+    top: 0;
+    position: fixed;
+    // margin-bottom: 10vh;
+    border: 1px solid black;
+    z-index: 1;
   }
   
   .logo {
@@ -154,7 +166,7 @@
     align-items: center;
     height: 49px;
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
   }
   
@@ -277,4 +289,3 @@
       margin-left: 200px;
     }
   }
-  
