--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -19,8 +19,8 @@
     height: 10vh;
     top: 0;
     position: fixed;
-    // margin-bottom: 10vh;
-    border: 1px solid black;
+    margin-bottom: 10vh;
+    // border: 1px solid black;
     z-index: 1;
   }
   
