--- a/src/app/components/get-all-books/get-all-books.component.html
+++ b/src/app/components/get-all-books/get-all-books.component.html
@@ -7,7 +7,7 @@
     <div>
 
 
-      <select class="select-box">
+      <select  [(ngModel)]="selectedValue" class="select-box" (change)="onSortOptionChange()">
         <option value="">Sort by relevance</option>
         <option *ngFor="let sort of SortOption" [value]="sort.value">
           {{sort.viewValue}}
