--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -169,33 +169,81 @@
   
   .qty-increase-remove-button {
     display: flex;
-    flex-direction: row;
     align-items: center;
-    gap: 26px;
+    // gap: 26px; 
     margin-top: 25px;
+    justify-content: space-between;
+    width: 600px;
+    // border: 1px solid black;
   }
-  
-  .qty-increase {
+  .qty{
+    border: 1px solid #DBDBDB;
+    width: 50px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+  }
+  .increase-qty {
+    width: 170px;
+    height: 40px;
     display: flex;
     flex-direction: row;
+    gap: 6px;
     align-items: center;
-    gap: 5px;
+    justify-content: space-around;
   }
-  
-  .decreaseQTY {
-    width: 24px;
-    height: 24px;
-    /* UI Properties */
+  .addToCartButton {
+    width: 120px;
+    height: 40px;
+    // background: grey 0% 0% no-repeat padding-box;
+    border-radius: 2px;
+    border: transparent;
+    opacity: 1;
+    color: #ffffff;
+    letter-spacing: 0px;
+    opacity: 1;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 200;
+    font-size: 16px;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    // border: 1px solid black;
+    // line-height: 14px;
+    cursor: pointer;
+  }
+  .decrease-increase-button {
     background: #fafafa 0% 0% no-repeat padding-box;
     border: 1px solid #dbdbdb;
     opacity: 1;
-    color: #333232;
-    font-size: 20px;
-    cursor: pointer;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    padding-bottom: 10px;
+    color: #0a0102;
+    font: 2em sans-serif;
+    cursor: pointer;
+    display: flex;
+    align-content: center;
+    justify-content: center;
   }
   
+  // .decrease-increase-button {
+  //   background: #fafafa 0% 0% no-repeat padding-box;
+  //   border: 1px solid #dbdbdb;
+  //   opacity: 1;
+  //   width: 38px;
+  //   height: 38px;
+  //   border-radius: 50%;
+  //   color: #0a0102;
+  //   font: 2em sans-serif;
+  //   cursor: pointer;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
   .display-qty {
     width: 41px;
     height: 24px;
